; ModuleID = '/home/carl/AnghaBench/linux/drivers/fpga/extr_dfl-fme-region.c_fme_region_get_bridges.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/fpga/extr_dfl-fme-region.c_fme_region_get_bridges.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fpga_region = type { i32, i32, %struct.dfl_fme_region_pdata* }
%struct.dfl_fme_region_pdata = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.device }
%struct.device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fpga_region*)* @fme_region_get_bridges to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fme_region_get_bridges(%struct.fpga_region* %0) #0 {
  %2 = alloca %struct.fpga_region*, align 8
  %3 = alloca %struct.dfl_fme_region_pdata*, align 8
  %4 = alloca %struct.device*, align 8
  store %struct.fpga_region* %0, %struct.fpga_region** %2, align 8
  %5 = load %struct.fpga_region*, %struct.fpga_region** %2, align 8
  %6 = getelementptr inbounds %struct.fpga_region, %struct.fpga_region* %5, i32 0, i32 2
  %7 = load %struct.dfl_fme_region_pdata*, %struct.dfl_fme_region_pdata** %6, align 8
  store %struct.dfl_fme_region_pdata* %7, %struct.dfl_fme_region_pdata** %3, align 8
  %8 = load %struct.dfl_fme_region_pdata*, %struct.dfl_fme_region_pdata** %3, align 8
  %9 = getelementptr inbounds %struct.dfl_fme_region_pdata, %struct.dfl_fme_region_pdata* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  store %struct.device* %11, %struct.device** %4, align 8
  %12 = load %struct.device*, %struct.device** %4, align 8
  %13 = load %struct.fpga_region*, %struct.fpga_region** %2, align 8
  %14 = getelementptr inbounds %struct.fpga_region, %struct.fpga_region* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.fpga_region*, %struct.fpga_region** %2, align 8
  %17 = getelementptr inbounds %struct.fpga_region, %struct.fpga_region* %16, i32 0, i32 0
  %18 = call i32 @fpga_bridge_get_to_list(%struct.device* %12, i32 %15, i32* %17)
  ret i32 %18
}

declare dso_local i32 @fpga_bridge_get_to_list(%struct.device*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
